--- a/taxConvert.html
+++ b/taxConvert.html
@@ -12,19 +12,24 @@
     <script src="script/js/economy.js"></script>
 </head>
 <body>
-    <div class="row m-5 shadow-lg align-center">
-        <h2 class="text-center">CALCULADORA DE INTERÉS COMPUESTO</h2>
-        <nav class="nav nav-pills flex-column flex-sm-row">
-            <a class="flex-sm-fill text-sm-center nav-link active" aria-current="page" href="taxConvert.html">Conversión de tasas</a>
-            <a class="flex-sm-fill text-sm-center nav-link" href="equalities.html">Equivalencias de Tasas</a>
-            <a class="flex-sm-fill text-sm-center nav-link" href="calculeTaxes.html">Calcular Interes Compuesto</a>
-            <a class="flex-sm-fill text-sm-center nav-link" href="annualPayment.html">Anualidades</a>
-            <a class="flex-sm-fill text-sm-center nav-link" href="amortization.html">Amortización</a>
-            <a class="flex-sm-fill text-sm-center nav-link" href="capitalization.html">Capitalización</a>
-        </nav>
-        
-    </div>
-    <div class="row p-5 m-5 shadow-lg">
+    <div class="container-fluid">
+        <div class="row vh-100">
+            <div class="col-md-3 shadow-lg p-3 d-flex flex-column" style="height: 100vh;">
+                <h2 class="text-center">CALCULADORA DE INTERÉS COMPUESTO</h2>
+                <nav class="nav nav-pills flex-column flex-grow-1">
+                    <a class="nav-link" aria-current="page" href="taxConvert.html">Conversión de tasas</a>
+                    <a class="nav-link" href="equalities.html">Equivalencias de Tasas</a>
+                    <a class="nav-link" href="calculeTaxes.html">Calcular Interes Compuesto</a>
+                    <a class="nav-link" href="annualPayment.html">Anualidades</a>
+                    <a class="nav-link active" href="amortization.html">Amortización</a>
+                    <a class="nav-link" href="capitalization.html">Capitalización</a>
+                </nav>
+                <small class="text-muted">Sebastian Piñeros Garzón 20241678016</small> <br>
+                <small class="text-muted">Wilson Danilo León Garzón 20241678010</small> <br>
+                <small class="text-muted">David Santiago Cundumi 20241678036</small> <br>
+            </div>
+            
+            <div class="col-md-9 p-3" id="content">
         <form action="">
             <div class="row mb-3">
                 <div class="col-12 ">
