--- a/capitalization.html
+++ b/capitalization.html
@@ -22,8 +22,8 @@
                     <a class="nav-link" href="equalities.html">Equivalencias de Tasas</a>
                     <a class="nav-link" href="calculeTaxes.html">Calcular Interes Compuesto</a>
                     <a class="nav-link" href="annualPayment.html">Anualidades</a>
-                    <a class="nav-link active" href="amortization.html">Amortización</a>
-                    <a class="nav-link" href="capitalization.html">Capitalización</a>
+                    <a class="nav-link" href="amortization.html">Amortización</a>
+                    <a class="nav-link active" href="capitalization.html">Capitalización</a>
                 </nav>
                 <small class="text-muted">Sebastian Piñeros Garzón 20241678016</small> <br>
                 <small class="text-muted">Wilson Danilo León Garzón 20241678010</small> <br>
