--- a/taxConvert.html
+++ b/taxConvert.html
@@ -17,11 +17,11 @@
             <div class="col-md-3 shadow-lg p-3 d-flex flex-column" style="height: 100vh;">
                 <h2 class="text-center">CALCULADORA DE INTERÉS COMPUESTO</h2>
                 <nav class="nav nav-pills flex-column flex-grow-1">
-                    <a class="nav-link" aria-current="page" href="taxConvert.html">Conversión de tasas</a>
+                    <a class="nav-link active" aria-current="page" href="taxConvert.html">Conversión de tasas</a>
                     <a class="nav-link" href="equalities.html">Equivalencias de Tasas</a>
                     <a class="nav-link" href="calculeTaxes.html">Calcular Interes Compuesto</a>
                     <a class="nav-link" href="annualPayment.html">Anualidades</a>
-                    <a class="nav-link active" href="amortization.html">Amortización</a>
+                    <a class="nav-link" href="amortization.html">Amortización</a>
                     <a class="nav-link" href="capitalization.html">Capitalización</a>
                 </nav>
                 <small class="text-muted">Sebastian Piñeros Garzón 20241678016</small> <br>
