--- a/capitalization.html
+++ b/capitalization.html
@@ -20,14 +20,15 @@
                 <nav class="nav nav-pills flex-column flex-grow-1">
                     <a class="nav-link" aria-current="page" href="taxConvert.html">Conversión de tasas</a>
                     <a class="nav-link" href="equalities.html">Equivalencias de Tasas</a>
-                    <a class="nav-link" href="calculeTaxes.html">Calcular Interes Compuesto</a>
+                    <a class="nav-link active" href="calculeTaxes.html">Calcular Interes Compuesto</a>
+                    <a class="nav-link active" href="calculeSimpleTaxes.html">Calcular Interes Simple</a>
                     <a class="nav-link" href="annualPayment.html">Anualidades</a>
                     <a class="nav-link" href="amortization.html">Amortización</a>
                     <a class="nav-link active" href="capitalization.html">Capitalización</a>
                 </nav>
-                <small class="text-muted">Sebastian Piñeros Garzón 20241678016</small> <br>
-                <small class="text-muted">Wilson Danilo León Garzón 20241678010</small> <br>
-                <small class="text-muted">David Santiago Cundumi 20241678036</small> <br>
+                <small class="text-muted">Julian Mateo Mogollon 20242678008</small> <br>
+                <small class="text-muted">Alexander Montaña Diaz  20242678015</small> <br>
+                <small class="text-muted">Tatiana Andrea Arevalo 20242678041</small> <br>
             </div>
             
             <div class="col-md-9 p-3" id="content">
