--- a/Capitalizacion.html
+++ b/Capitalizacion.html
@@ -13,7 +13,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
-    <script src="script/js/economy.js"></script>
+    <script src="script/js/Calculadora.js"></script>
 </head>
 <body style='font-family: Montserrat, serif; font-optical-sizing: auto; font-style: normal;'>
     <div class="container-fluid">
