--- a/ConversionTasas.html
+++ b/ConversionTasas.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
-    <script src="script/js/economy.js"></script>
+    <script src="script/js/Calculadora.js"></script>
 </head>
 <body style='font-family: Montserrat, serif; font-optical-sizing: auto; font-style: normal;'>
     <div class="container-fluid">
