--- a/Anualidades.html
+++ b/Anualidades.html
@@ -1,5 +1,6 @@
-<!DOCTYPE html >
+<!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Calculadora - Ingeniería Económica</title>
@@ -8,18 +9,40 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
 
-    <link rel="preconnect" href="https://fonts.googleapis.com"> 
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
+
+    <style>
+        h2 {
+            color: #4d82bc;
+            font-weight: 600;
+        }
+
+        .nav-link {
+            color: #4d82bc;
+            font-weight: 500;
+        }
+
+        .nav-pills .nav-link.active {
+            background-color: #81a5cc;
+        }
+
+        .nav-link:hover {
+            color: #376998;
+        }
+    </style>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <script src="script/js/Calculadora.js"></script>
 </head>
+
 <body style='font-family: Montserrat, serif; font-optical-sizing: auto; font-style: normal;'>
     <div class="container-fluid">
         <div class="row vh-100">
-            <div class="col-md-3 shadow-lg p-3 d-flex flex-column" style="height: 100vh;">
+            <div class="col-md-3 shadow-lg p-3 d-flex flex-column">
                 <nav class="nav nav-pills flex-column flex-grow-1">
                     <a class="nav-link" aria-current="page" href="ConversionTasas.html">Conversión de tasas</a>
                     <a class="nav-link" href="Equivalencia.html">Equivalencias de Tasas</a>
@@ -29,109 +52,127 @@
                     <a class="nav-link" href="Amortizacion.html">Amortización</a>
                     <a class="nav-link" href="Capitalizacion.html">Capitalización</a>
                 </nav>
-                <small class="text-muted text-center" >INTEGRANTES</small>
+                <small class="text-muted text-center"><strong>INTEGRANTES</strong></small>
                 <small class="text-muted">Julian Mateo Mogollon 20242678008</small>
-                <small class="text-muted">Alexander Montaña Diaz  20242678015</small>
-                <small class="text-muted">Tatiana Andrea Arevalo 20242678041</small>    
+                <small class="text-muted">Alexander Montaña Diaz 20242678015</small>
+                <small class="text-muted">Tatiana Andrea Arevalo 20242678041</small>
             </div>
-            
-    <div class="col-md-9 p-3" id="content">
-        <h2 class="text-center">Calculadora - Ingeniería Económica</h2><br><br><br>
-        <form action="" style="margin:0 3rem">
-            <div class="row mb-3">
-                <div class="col-12">
-                    <label for="annualPaymentType">Tipo de Anualidad</label>
-                    <select id="annualPaymentType" class="form-control">
-                        <option value="Ordinaria" selected>Ordinaria</option>
-                        <option value="Anticipada">Anticipada</option>
-                    </select>
-                </div>
-            </div>
-            <div class="row mb-3">
-                <div class="col-4">
-                    <label for="p">Valor Presente:</label>
-                    <input type="text" id="p" class="form-control">
-                </div>
-                <div class="col-4">
-                    <label for="n">Periodos:</label>
-                    <div class="input-group">
-                        <input type="text" id="n" class="form-control">
-                        <div class="input-group-append">
-                            <select id="paymentTerm" class="form-control">
-                                <option value="12" selected>Meses</option>
-                                <option value="6">Bimestres</option>
-                                <option value="4">Trimestres</option>
-                                <option value="3">Cuatrimestres</option>
-                                <option value="2">Semestres</option>
-                                <option value="1">Años</option>
+
+            <div class="col-md-9 p-3" id="content">
+                <h2 class="text-center">Calculadora - Ingeniería Económica</h2><br><br><br>
+                <form action="" style="margin:0 3rem">
+                    <div class="row mb-3">
+                        <div class="col-12">
+                            <label for="annualPaymentType">Tipo de Anualidad</label>
+                            <select id="annualPaymentType" class="form-control">
+                                <option value="Ordinaria" selected>Ordinaria</option>
+                                <option value="Anticipada">Anticipada</option>
                             </select>
                         </div>
                     </div>
-                </div>
-                <div class="col-4">
-                    <label for="s">Valor Futuro:</label>
-                    <input type="text" id="s" class="form-control">
-                </div>
-            </div>
-            <div class="row mb-3">
-                <div class="col-4">
-                    <label for="i">Tasa:</label>
-                    <div id="taxGroup" class="input-group">
-                        <input type="text" id="i" class="form-control">
-                        <div class="input-group-append">
-                            <span class="input-group-text">%</span>
+                    <div class="row mb-3">
+                        <div class="col-4">
+                            <label for="p">Valor Presente:</label>
+                            <div class="input-group">
+                                <div class="input-group-prepend">
+                                    <span class="input-group-text">$</span>
+                                </div>
+                                <input type="text" id="p" class="form-control">
+                            </div>
+                        </div>
+                        <div class="col-4">
+                            <label for="n">Periodos:</label>
+                            <div class="input-group">
+                                <input type="text" id="n" class="form-control">
+                                <div class="input-group-append">
+                                    <select id="paymentTerm" class="form-control">
+                                        <option value="12" selected>Meses</option>
+                                        <option value="6">Bimestres</option>
+                                        <option value="4">Trimestres</option>
+                                        <option value="3">Cuatrimestres</option>
+                                        <option value="2">Semestres</option>
+                                        <option value="1">Años</option>
+                                    </select>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-4">
+                            <label for="s">Valor Futuro:</label>
+                            <div class="input-group">
+                                <div class="input-group-prepend">
+                                    <span class="input-group-text">$</span>
+                                </div>
+                                <input type="text" id="s" class="form-control">
+                            </div>
                         </div>
                     </div>
-                    <div id="taxErrors">
+                    <div class="row mb-3">
+                        <div class="col-4">
+                            <label for="i">Tasa:</label>
+                            <div id="taxGroup" class="input-group">
+                                <input type="text" id="i" class="form-control">
+                                <div class="input-group-append">
+                                    <span class="input-group-text">%</span>
+                                </div>
+                            </div>
+                            <div id="taxErrors">
 
+                            </div>
+                        </div>
+                        <div class="col-4">
+                            <label for="taxType"></label>
+                            <select id="taxType" class="form-control">
+                                <option value="" disabled style="font-weight: bold;">Tasas en I</option>
+                                <option value="Efectivo" selected>Efectivo</option>
+                                <option value="Periodico">Periodico</option>
+                                <option value="" disabled style="font-weight: bold;">Tasas en J</option>
+                                <option value="Nominal">Nominal</option>
+                                <option value="Vencido">Vencido</option>
+                                <option value="Capitalizable">Capitalizable</option>
+                                <option value="Convertible">Convertible</option>
+                            </select>
+                        </div>
+                        <div class="col-4 ">
+                            <label for="taxTerm"></label>
+                            <select id="taxTerm" class="form-control">
+                                <option value="12" selected>Mensual</option>
+                                <option value="6">Bimestral</option>
+                                <option value="4">Trimestral</option>
+                                <option value="3">Cuatrimestral</option>
+                                <option value="2">Semestral</option>
+                                <option value="1">Anual</option>
+                            </select>
+                        </div>
                     </div>
-                </div>
-                <div class="col-4">
-                    <label for="taxType"></label>
-                    <select id="taxType" class="form-control">
-                        <option value="" disabled style="font-weight: bold;">Tasas en I</option>
-                        <option value="Efectivo" selected>Efectivo</option>
-                        <option value="Periodico">Periodico</option>
-                        <option value="" disabled style="font-weight: bold;">Tasas en J</option>
-                        <option value="Nominal">Nominal</option>
-                        <option value="Vencido">Vencido</option>
-                        <option value="Capitalizable">Capitalizable</option>
-                        <option value="Convertible">Convertible</option>
-                    </select>
-                </div>
-                <div class="col-4 ">
-                    <label for="taxTerm"></label>
-                    <select id="taxTerm" class="form-control">
-                        <option value="12" selected>Mensual</option>
-                        <option value="6">Bimestral</option>
-                        <option value="4">Trimestral</option>
-                        <option value="3">Cuatrimestral</option>
-                        <option value="2">Semestral</option>
-                        <option value="1">Anual</option>
-                    </select>
-                </div>
+                    <div class="row mb-3">
+                        <div class="col-4">
+                            <label for="A">Anualidad o Cuota:</label>
+                            <div class="input-group">
+                                <div class="input-group-prepend">
+                                    <span class="input-group-text">$</span>
+                                </div>
+                                <input type="text" id="A" class="form-control">
+                            </div>
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="row">
+                        <div class="col-4 d-flex justify-content-end">
+                            <button id="generateCapitalizationTable" class="btn btn-primary"
+                                style="background-color: #4d82bc;"> Calcular Tabla de Capitalización</button>
+                        </div>
+                        <div class="col-4 d-flex justify-content-end">
+                            <button id="generateAmortizationTable" class="btn btn-primary"
+                                style="background-color: #4d82bc;"> Calcular Tabla de Amortización</button>
+                        </div>
+                        <div class="col-4 d-flex justify-content-end">
+                            <button id="calculateAnnual" class="btn btn-primary"
+                                style="background-color: #8e5fae; border: none;">
+                                Calcular Faltante</button>
+                        </div>
+                    </div>
+                </form>
             </div>
-            <div class="row mb-3">
-                <div class="col-4">
-                    <label for="A">Anualidad o Cuota:</label>
-                    <input type="text" id="A" class="form-control">
-                </div>
-            </div>
-            <hr>
-            <div class="row">
-                <div class="col-4 d-flex justify-content-end">
-                    <button id="generateCapitalizationTable" class="btn btn-primary" style="background-color: #4d82bc;"> Calcular Tabla de Capitalización</button>
-                </div>  
-                <div class="col-4 d-flex justify-content-end">
-                    <button id="generateAmortizationTable" class="btn btn-primary" style="background-color: #4d82bc;"> Calcular Tabla de Amortización</button>
-                </div>
-                <div class="col-4 d-flex justify-content-end">
-                    <button id="calculateAnnual" class="btn btn-primary" style="background-color: #8e5fae;"> Calcular Faltante</button>
-                </div>
-            </div>
-        </form>
-    </div>
 </body>
+
 </html>
-
-
