--- a/InteresSimple.html
+++ b/InteresSimple.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Calculadora - Ingeniería Económica</title>
@@ -8,18 +9,40 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
 
-    <link rel="preconnect" href="https://fonts.googleapis.com"> 
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
+
+    <style>
+        h2 {
+            color: #4d82bc;
+            font-weight: 600;
+        }
+
+        .nav-link {
+            color: #4d82bc;
+            font-weight: 500;
+        }
+
+        .nav-pills .nav-link.active {
+            background-color: #81a5cc;
+        }
+
+        .nav-link:hover {
+            color: #376998;
+        }
+    </style>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <script src="script/js/Calculadora.js"></script>
 </head>
+
 <body style='font-family: Montserrat, serif; font-optical-sizing: auto; font-style: normal;'>
     <div class="container-fluid">
         <div class="row vh-100">
-            <div class="col-md-3 shadow-lg p-3 d-flex flex-column" style="height: 100vh;">
+            <div class="col-md-3 shadow-lg p-3 d-flex flex-column">
                 <nav class="nav nav-pills flex-column flex-grow-1">
                     <a class="nav-link" aria-current="page" href="ConversionTasas.html">Conversión de tasas</a>
                     <a class="nav-link" href="Equivalencia.html">Equivalencias de Tasas</a>
@@ -29,70 +52,72 @@
                     <a class="nav-link" href="Amortizacion.html">Amortización</a>
                     <a class="nav-link" href="Capitalizacion.html">Capitalización</a>
                 </nav>
-                <small class="text-muted text-center" >INTEGRANTES</small>
+                <small class="text-muted text-center"><strong>INTEGRANTES</strong></small>
                 <small class="text-muted">Julian Mateo Mogollon 20242678008</small>
-                <small class="text-muted">Alexander Montaña Diaz  20242678015</small>
-                <small class="text-muted">Tatiana Andrea Arevalo 20242678041</small> 
+                <small class="text-muted">Alexander Montaña Diaz 20242678015</small>
+                <small class="text-muted">Tatiana Andrea Arevalo 20242678041</small>
             </div>
-            
-    <div class="col-md-9 p-3" id="content">
-        <h2 class="text-center">Calculadora - Ingeniería Económica</h2><br><br><br>
-        <form action="">
-            <div class="row mb-3">
-                <div class="col-4">
-                    <label for="p">Valor Presente:</label>
-                    <div class="input-group">
-                        <div class="input-group-prepend">
-                            <span class="input-group-text">$</span>
+
+            <div class="col-md-9 p-3" id="content">
+                <h2 class="text-center">Calculadora - Ingeniería Económica</h2><br><br><br>
+                <form action="">
+                    <div class="row text-center" style="margin: 4rem 2.8rem;">
+                        <div class="col-6">
+                            <label for="p">Valor Presente:</label>
+                            <div class="input-group">
+                                <div class="input-group-prepend">
+                                    <span class="input-group-text">$</span>
+                                </div>
+                                <input type="text" id="p" class="form-control">
+                            </div>
                         </div>
-                        <input type="text" id="p" class="form-control">
-                    </div>
-                </div>
-                <div class="col-4">
-                    <label for="n">Tiempo:</label>
-                    <div class="input-group">
-                        <input type="text" id="n" class="form-control">
-                        <div class="input-group-append">
-                            <select id="paymentTerm" class="form-control">
-                                <option value="1" selected>Comercial</option>
-                                <option value="2">Bancario</option>
-                                <option value="3">Exacto</option>
-                                <option value="4">Ideal</option>
-                            </select>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row mb-3">
-                <div class="col-4">
-                    <label for="i">Tasa:</label>
-                    <div class="input-group">
-                        <input type="text" id="i" class="form-control">
-                        <div class="input-group-append">
-                            <span class="input-group-text">%</span>
+                        <div class="col-6">
+                            <label for="n">Tiempo:</label>
+                            <div class="input-group">
+                                <input type="text" id="n" class="form-control">
+                                <div class="input-group-append d-flex">
+                                    <span class="input-group-text">Meses</span>
+                                    <select id="paymentTerm" class="form-control">
+                                        <option value="1" selected>Comercial</option>
+                                        <option value="2">Bancario</option>
+                                        <option value="3">Exacto</option>
+                                        <option value="4">Ideal</option>
+                                    </select>
+                                </div>
+                            </div>
                         </div>
                     </div>
-                </div>
-            </div>
-            <div class="row mb-3"></div>
-                <div class="col-4">
-                    <label for="I">Interés Simple:</label>
-                    <div class="input-group">
-                        <div class="input-group-prepend">
-                            <span class="input-group-text">$</span>
+                    <div class="row text-center" style="margin: 4rem 2.8rem;">
+                        <div class="col-6">
+                            <label for="i">Tasa:</label>
+                            <div class="input-group">
+                                <input type="text" id="i" class="form-control">
+                                <div class="input-group-append">
+                                    <span class="input-group-text">%</span>
+                                </div>
+                            </div>
                         </div>
-                        <input type="text" id="I" class="form-control">
+                        <div class="col-6">
+                            <label for="I">Interés Simple:</label>
+                            <div class="input-group">
+                                <div class="input-group-prepend">
+                                    <span class="input-group-text">$</span>
+                                </div>
+                                <input type="text" id="I" class="form-control">
+                            </div>
+                        </div>
                     </div>
-                </div>
-                <div class="row d-flex justify-content-end">
-                    <div class="col-3 d-flex justify-content-end">
-                        <button id="calculateSimpTax" class="btn btn-success float-left"> Calcular Faltante</button>
+
+                    <div class="row mt-5">
+                        <div class="col-12 d-flex justify-content-center">
+                            <button id="calculateSimpTax" class="btn btn-primay"
+                                style="background-color: #4d82bc; color: white;">
+                                Calcular Faltante</button>
+                        </div>
                     </div>
-                </div>
             </div>
-        </form>
-    </div>
+            </form>
+        </div>
 </body>
+
 </html>
-
-
