--- a/Amortizacion.html
+++ b/Amortizacion.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Calculadora - Ingeniería Económica</title>
-    <link rel="shortcut icon" href="script/img/calculadora.png" />
+    <link rel="shortcut icon" href="script/img/logoeco.png" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
 
