--- a/Anualidades.html
+++ b/Anualidades.html
@@ -53,9 +53,9 @@
                     <a class="nav-link" href="Capitalizacion.html">Capitalización</a>
                 </nav>
                 <small class="text-muted text-center"><strong>INTEGRANTES</strong></small>
-                <small class="text-muted">Julian Mateo Mogollon 20242678008</small>
-                <small class="text-muted">Alexander Montaña Diaz 20242678015</small>
-                <small class="text-muted">Tatiana Andrea Arevalo 20242678041</small>
+                <small class="text-muted">Julian Mateo Mogollon 20242678008 301</small>
+                <small class="text-muted">Alexander Montaña Diaz 20242678015 301</small>
+                <small class="text-muted">Tatiana Andrea Arevalo 20242678041 301</small>
             </div>
 
             <div class="col-md-9 p-3" id="content">
