--- a/Capitalizacion.html
+++ b/Capitalizacion.html
@@ -51,9 +51,9 @@
                     <a class="nav-link active" href="Capitalizacion.html">Capitalización</a>
                 </nav>
                 <small class="text-muted text-center"><strong>INTEGRANTES</strong></small>
-                <small class="text-muted">Julian Mateo Mogollon 20242678008</small>
-                <small class="text-muted">Alexander Montaña Diaz 20242678015</small>
-                <small class="text-muted">Tatiana Andrea Arevalo 20242678041</small>
+                <small class="text-muted">Julian Mateo Mogollon 20242678008 301</small>
+                <small class="text-muted">Alexander Montaña Diaz 20242678015 301</small>
+                <small class="text-muted">Tatiana Andrea Arevalo 20242678041 301</small>
             </div>
 
 
